Fix header collapsing idiotically on mobile sizes

--- a/resources/public/css/_bootstrap_custom.scss
+++ b/resources/public/css/_bootstrap_custom.scss
@@ -10,6 +10,26 @@ $theme-colors: (
   'dark-blue': vars.$blue-dark
 );
 
+$grid-breakpoints: (
+  xs: 0,
+  sm: 576px,
+  md: 768px,
+  lg: 992px,
+  xl: 1200px,
+  xxl: 1440px,
+  xxxl: 1600px
+);
+
+$container-max-widths: (
+  xs: 0,
+  sm: 576px,
+  md: 768px,
+  lg: 992px,
+  xl: 1200px,
+  xxl: 1440px,
+  xxxl: 1600px
+);
+
 @import '../node_modules/bootstrap/scss/bootstrap';
 
 // -----------------------------------------------------------------------------
